Updated about page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
       <div>
         <h1><a href="/">{{ site.title }}</a><small> (<a href="https://twitter.com/{{ site.username }}">@{{ site.username }}</a>)</small></h1>
         <small>{{ site.description }}</small>
+        <!-- if these don't appear it's to do with ad blockers -->
         {% include social-buttons.html %}
       </div>
     </div>
