Fixed active links on navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,15 @@
 
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="/js/default.js"></script>
+    <script>
+      $(function() {
+        var addr = ['gmail.com', '{{ site.username }}'];
+        addr.reverse();
+
+        $('li[data-url="{{ page.url }}"]').addClass('active');
+        $('.social-buttons').find('.btn-google').attr('href', 'mailto:' + addr.join('@'));
+      });
+    </script>
   </body>
 
 </html>
