Fix font weight and give site a more central-layout.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="row page-header">
     <div class="col-md-3">
-      <img class="img-responsive img-circle pull-right img-header" src="/images/IMG_0140.JPG">
+      <img class="img-responsive img-circle pull-right img-header" src="/images/IMG_0140.png">
     </div>
     <div class="col-md-9">
       <div>
