--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,19 @@
 
     <div class="container">
 
-      {% include header.html %}
-
       <div class="row">
-        <div class="col-md-12">
-          {{ content }}
+        <div class="col-md-10 col-md-offset-1">
+          {% include header.html %}
+
+          <div class="row">
+            <div class="col-md-12">
+              {{ content }}
+            </div>
+          </div>
+
+          {% include footer.html %}
         </div>
       </div>
-
-      {% include footer.html %}
 
     </div>
 
