--- a/css/override.css
+++ b/css/override.css
@@ -1,5 +1,9 @@
 body {
 	padding-bottom: 70px;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.6em;
+  font-size: 1.4em;
+  font-weight: 400;
 }
 
 .img-header {
@@ -15,8 +19,8 @@ footer .social-buttons {
 	margin-bottom: 7px;
 }
 
-body {
-	font-family: 'Open Sans', sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
 }
 
 /**
